# search_engine

./: CMakeLists.txt  README.md  main.cpp
examples/: answers.json  config.json  requests.json
examples/resources/: file003.txt  file004.txt
include/: converterJSON.h  invertedIndex.h  searchServer.h
src/: CMakeLists.txt  converterJSON.cpp  invertedIndex.cpp  main.cpp  searchEngineTest.cpp  searchServer.cpp
tests/: CMakeLists.txt  searchEngine_tests.cpp
